--- a/index.html
+++ b/index.html
@@ -3,10 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>English Hub</title>
+    <title>English Hub | تعلم الإنجليزية ببساطة</title>
+<meta name="description" content="منصة English Hub لتعلم اللغة الإنجليزية من الصفر للاحتراف. دروس قواعد، كلمات، واختبارات تفاعلية مجانية.">
+<meta name="keywords" content="تعلم الانجليزية، قواعد الانجليزية، كلمات انجليزي، كورس انجليزي مجاني، English Hub">
+
+<meta property="og:title" content="English Hub | طريقك لإتقان الإنجليزية">
+<meta property="og:description" content="ابدأ رحلتك التعليمية مع أقوى الاختبارات والدروس المبسطة.">
+<!-- <meta property="og:image" content="رابط_صورة_لوجو_موقعك.jpg"> -->
+<meta property="og:url" content="https://learn-english-hub.netlify.app/">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "EducationalOrganization",
+  "name": "English Hub",
+  "url": "https://learn-english-hub.netlify.app/",
+  "description": "منصة تعليمية لتعلم اللغة الإنجليزية"
+}
+</script>
 </head>
 <body>
     <!-- ===== الهيدر ===== -->
@@ -204,3 +220,4 @@
 </body>
 
 </html>
+
