--- a/index.html
+++ b/index.html
@@ -3,26 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>English Hub | تعلم الإنجليزية ببساطة</title>
-<meta name="description" content="منصة English Hub لتعلم اللغة الإنجليزية من الصفر للاحتراف. دروس قواعد، كلمات، واختبارات تفاعلية مجانية.">
-<meta name="keywords" content="تعلم الانجليزية، قواعد الانجليزية، كلمات انجليزي، كورس انجليزي مجاني، English Hub">
 
-<meta property="og:title" content="English Hub | طريقك لإتقان الإنجليزية">
-<meta property="og:description" content="ابدأ رحلتك التعليمية مع أقوى الاختبارات والدروس المبسطة.">
-<!-- <meta property="og:image" content="رابط_صورة_لوجو_موقعك.jpg"> -->
+
+    <meta name="description" content="تعلم الإنجليزية مجاناً مع English Hub. دروس قواعد مبسطة، أهم الكلمات، واختبارات تفاعلية لتقييم مستواك فوراً.">
+<meta name="keywords" content="كورسات انجليزي مجانا,تعلم الانجليزية, قواعد انجليزي, كلمات انجليزية, اختبارات انجليزي, English Hub, تعلم اللغة الانجليزية مجانا">
+<link rel="canonical" href="https://learn-english-hub.netlify.app/">
+
+<meta property="og:type" content="website">
 <meta property="og:url" content="https://learn-english-hub.netlify.app/">
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <script type="application/ld+json">
+<meta property="og:title" content="English Hub | طريقك لإتقان الإنجليزية">
+<meta property="og:description" content="دروس تفاعلية واختبارات ذكية لتطوير لغتك الإنجليزية من الصفر.">
+<meta property="og:image" content="https://learn-english-hub.netlify.app/assets/images/logo.png"> <meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:title" content="English Hub | تعلم الإنجليزية ببساطة">
+<meta property="twitter:description" content="منصة تعليمية مجانية لتعلم الإنجليزية من خلال الدروس والاختبارات.">
+
+<script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "EducationalOrganization",
+  "@type": "WebSite",
   "name": "English Hub",
   "url": "https://learn-english-hub.netlify.app/",
-  "description": "منصة تعليمية لتعلم اللغة الإنجليزية"
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://learn-english-hub.netlify.app/search?q={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
 }
 </script>
+
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- ===== الهيدر ===== -->
@@ -220,4 +231,5 @@
 </body>
 
 </html>
+
 
