--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta name="google-site-verification" content="wSNnngLHz0aAcYIn8vWQD6YzABZ0dgxEbp-wnUJVOeI" />
+
 
     <meta name="description" content="تعلم الإنجليزية مجاناً مع English Hub. دروس قواعد مبسطة، أهم الكلمات، واختبارات تفاعلية لتقييم مستواك فوراً.">
 <meta name="keywords" content="كورسات انجليزي مجانا,تعلم الانجليزية, قواعد انجليزي, كلمات انجليزية, اختبارات انجليزي, English Hub, تعلم اللغة الانجليزية مجانا">
@@ -231,5 +233,6 @@
 </body>
 
 </html>
+
 
 
