--- a/index.html
+++ b/index.html
@@ -177,6 +177,14 @@
     </div>
 </section>
 
+
+    <section class="ad-section" style="max-width: 800px; margin: 40px auto; padding: 0 20px;">
+    <h3 style="text-align: center; color: #666; font-size: 14px; margin-bottom: 10px;">إعلان مقترح</h3>
+    
+    <script async="async" data-cfasync="false" src="https://pl28551704.effectivegatecpm.com/01ec5e3a3e20d18d571a7c236ba0bf1f/invoke.js"></script>
+    <div id="container-01ec5e3a3e20d18d571a7c236ba0bf1f"></div>
+</section>
+
     <!-- ===== الفوتر ===== -->
     <footer class="more-style-footer">
         <div class="footer-inner">
@@ -233,6 +241,7 @@
 </body>
 
 </html>
+
 
 
 
