--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ar" dir="rtl">
 <head>
 
-
+    <script src="https://quge5.com/88/tag.min.js" data-zone="204861" async data-cfasync="false"></script>
+    
     <meta name="monetag" content="3b898bda2c10253663c1a892ccaa601d">
 
     
@@ -257,6 +258,7 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 </body>
 
 </html>
+
 
 
 
