--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 
     <script src="https://quge5.com/88/tag.min.js" data-zone="204861" async data-cfasync="false"></script>
     
-    <meta name="monetag" content="3b898bda2c10253663c1a892ccaa601d">
-
+<script>(function(s){s.dataset.zone='10509266',s.src='https://gizokraijaw.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -258,6 +257,7 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 </body>
 
 </html>
+
 
 
 
