--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="ar" dir="rtl">
 <head>
 
-    <script src="https://quge5.com/88/tag.min.js" data-zone="204861" async data-cfasync="false"></script>
-    
-<script>(function(s){s.dataset.zone='10509266',s.src='https://gizokraijaw.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+    <script async="async" data-cfasync="false" src="https://pl28551704.effectivegatecpm.com/01ec5e3a3e20d18d571a7c236ba0bf1f/invoke.js"></script>
+<div id="container-01ec5e3a3e20d18d571a7c236ba0bf1f"></div>
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -257,6 +256,7 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 </body>
 
 </html>
+
 
 
 
