--- a/details.html
+++ b/details.html
@@ -25,6 +25,35 @@
 <body>
 
 
+    <div style="position: absolute; z-index: 99999">
+      <input autocomplete="off" type="checkbox" id="aadsstickymkri0pvq" hidden />
+      <div style="padding-top: auto; padding-bottom: 0;">
+        <div style="width:100%;height:auto;position:fixed;text-align:center;font-size:0;top:0;left:0;right:0;margin:auto">
+          <label for="aadsstickymkri0pvq" style="top: 50%;transform: translateY(-50%);right:24px;; position: absolute;border-radius: 4px; background: rgba(248, 248, 249, 0.70); padding: 4px;z-index: 99999;cursor:pointer">
+            <svg fill="#000000" height="16px" width="16px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 490 490">
+              <polygon points="456.851,0 245,212.564 33.149,0 0.708,32.337 212.669,245.004 0.708,457.678 33.149,490 245,277.443 456.851,490 489.292,457.678 277.331,245.004 489.292,32.337 "/>
+            </svg>
+          </label>
+          <div id="frame" style="width: 100%;margin: auto;position: relative; z-index: 99998;">
+                      <iframe data-aa=2425288 src=//acceptable.a-ads.com/2425288/?size=Adaptive style='border:0; padding:0; width:70%; height:auto; overflow:hidden; margin: auto'></iframe>
+                      <div style="width: 70%;margin:auto;text-align: left;position: absolute;left: 0;right: 0">
+                        <a style="display:inline-block;font-size: 13px;color: #263238;padding: 4px 10px;background: #F8F8F9;text-decoration: none; border-radius: 0 0 4px 4px;"
+                          id="frame-link"
+                          target="_blank"
+                          href="https://aads.com/campaigns/new?source_id=2425288&source_type=ad_unit&partner=2425288">
+                          Advertise here
+                        </a>
+                      </div>
+                  </div>
+        </div>
+        <style>
+      #aadsstickymkri0pvq:checked + div {
+        display: none;
+      }
+    </style>
+    </div></div>
+
+
     <div id="progress-container" style="position:fixed; top:0; left:0; width:100%; height:5px; background:transparent; z-index:1001;">
     <div id="progress-bar" style="width:0%; height:100%; background:var(--secondary); transition: 0.1s;"></div>
 </div>
@@ -71,4 +100,5 @@
 
       <script src="js/details.js"></script>
 </body>
+
 </html>
